# microqa

./: .gitignore  README.md  callGraph.orig  config-alt.yaml  config.yaml  main.py  makefile  microqa-config-alt.yaml  microqa-config-make.yaml  microqa-config.yaml  microqa.yml  net_graph.json  net_graph_tns.json  net_topo.json  parse_weavescope.py  service-graph.dot  setup.py  weavescope.py  wv.py
microqa/: main.py  requirements.txt
microqa/rules/: ACS.py  TCM.py
microqa/service_graph/: dot_graph.py
param/: go_param.py  js_param.py  php_param.py  py_param.py
parser/param/: __init__.py  java_param.py
parser/service_graph/: __init__.py  dot_graph.py  weavescope_graph.py
rules/: ACS.py  ALCOM.py  TCM.py  __init__.py  rule.py  rules.py
src/: dockerfile  makefile  requirements.txt  setup.cfg
src/microqa/: callGraph  main.py
src/microqa/param/: py_param.py
src/microqa/rules/: ALCOM.py  TRS.py  interface.py  rule.py
src/microqa/service_graph/: weavescope_graph.py
src/microqa/tests_callgraph/: example.go
