[metadata]
name = microqa
author = Alvin Wilta
version = 0.8
description = Microservice Quality Assessment Tools using static analysis and dynamic analysis
long_description = file: README.md
url = https://github.com/alvinwilta/microqa
license = GNU


[options]
packages = find
python_requires = >=3.6
install_requires =
    certifi
    charset-normalizer
    idna
    pygraphviz
    requests
    urllib3
    pyyaml

[options.packages.find]
exclude =
    tests*
    .venv*

[options.entry_points]
console_scripts =
    microqa = microqa.main:main